--- a/mediation-admob/build.gradle
+++ b/mediation-admob/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -35,4 +36,10 @@ dependencies {
     implementation project(path: ':mediation-library')
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
+}
+repositories {
+    mavenCentral()
 }
