--- a/mediation-library/build.gradle
+++ b/mediation-library/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.firebase:firebase-config:21.0.0'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
 }
