--- a/mediation-library/src/main/AndroidManifest.xml
+++ b/mediation-library/src/main/AndroidManifest.xml
@@ -3,4 +3,7 @@
     package="com.awesome.mediation.library">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
