--- a/mediation-admob/build.gradle
+++ b/mediation-admob/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation project(path: ':mediation-library')
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'org.jetbrains:annotations:15.0'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.5.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
 }
