--- a/mediation-library/build.gradle
+++ b/mediation-library/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 100
+        versionName "1.0.0"
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -31,6 +31,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.google.firebase:firebase-config:21.0.0'
-    implementation 'com.google.firebase:firebase-core:19.0.0'
+    compileOnly 'com.google.firebase:firebase-config:21.0.0'
+    compileOnly 'com.google.firebase:firebase-core:19.0.0'
+    compileOnly 'com.squareup.picasso:picasso:2.71828'
 }
