--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':mediation-library')
-    implementation project(path: ':mediation-unity')
-    implementation project(path: ':mediation-admob')
 
+    implementation project(path: ':mediation-library')
     implementation 'com.google.firebase:firebase-config:21.0.0'
     implementation 'com.google.firebase:firebase-core:19.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation project(path: ':mediation-unity')
+    implementation 'com.unity3d.ads:unity-ads:3.7.2'
+
+    implementation project(path: ':mediation-admob')
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
+
 
 }
