update appodeal ads

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://artifactory.appodeal.com/appodeal" }
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
