--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,14 @@ dependencies {
     implementation 'com.unity3d.ads:unity-ads:3.7.2'
 
     implementation project(path: ':mediation-admob')
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+//    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
 
     implementation 'com.explorestack:consent:1.0.4'
-    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
-    implementation 'com.appodeal.ads:sdk:2.10.1.0'
+
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
+    implementation 'com.appodeal.ads:sdk:2.10.1.+'
+
     implementation project(path: ':mediation-appodeal')
 
 }
