--- a/mediation-appodeal/build.gradle
+++ b/mediation-appodeal/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation project(path: ':mediation-library')
     compileOnly 'com.explorestack:consent:1.0.4'
-    compileOnly 'com.google.android.gms:play-services-ads-identifier:17.0.1'
-    compileOnly 'com.appodeal.ads:sdk:2.10.1.0'
+
+    compileOnly 'com.google.android.gms:play-services-ads-identifier:17.0.0'
+    compileOnly 'com.appodeal.ads:sdk:2.10.1.+'
 }
