--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':mediation-library'
 include ':mediation-unity'
 include ':mediation-admob'
 include ':mediation-appodeal'
+include ':mediation-native-template'
