--- a/mediation-native-template/build.gradle
+++ b/mediation-native-template/build.gradle
@@ -7,11 +7,12 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdkVersion 22
+        minSdkVersion 19
         targetSdkVersion 30
-        versionCode 100
-        versionName "1.0.0"
+        versionCode 1
+        versionName "1.0"
 
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -31,8 +32,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation project(path: ':mediation-native-template')
-    compileOnly 'com.google.firebase:firebase-config:21.0.0'
-    compileOnly 'com.google.firebase:firebase-core:19.0.0'
-    compileOnly 'com.squareup.picasso:picasso:2.71828'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
